# lct-master

./: .gitignore  README.md
charles-university/data-structures-1/fibonacci-heap/: .gitignore  CMakeLists.txt  Makefile  README  README.md  fibheaptest.sh  fibonacci_heap.cbp
charles-university/data-structures-1/fibonacci-heap/docs/: Data Structures I_ Homework 2.html  assignment-2-report.docx  results-assignment-2.xlsx  results.txt
charles-university/data-structures-1/fibonacci-heap/fibheap-dan-kondratyuk/: Makefile  README  fibheap.c  fibheaptest.sh  heap.c  heap.h  heapgen.cpp  node.c  node.h  operation.c
charles-university/data-structures-1/fibonacci-heap/src/: Makefile  debug.c  debug.h  fibheap.c  heap.c  heap.h  heapgen.cpp  node.c  node.h  operation.c  operation.h
charles-university/data-structures-1/hashing/: CMakeLists.txt  Makefile  README  avg.awk  avg.py  hash-scheme.c  hash-scheme.h  hash-system.c  hash-system.h  hashing  hashing.cbp  main.c  random-gen.c  stats.py  testhashing.sh
charles-university/data-structures-1/hashing/docs/: assignment-4-report.docx  cuckoo-multiply-shift.csv  cuckoo-tabulation.csv  cuckoo-tabulation.txt  linear-probing-multiply-shift.csv  linear-probing-naive-modulo.csv  linear-probing-tabulation.csv  results-assignment-4.xlsx  sequential-multiply-shift.csv  sequential-tabulation.csv
charles-university/data-structures-1/hashing/hashing-dan-kondratyuk/: Makefile  README  avg.py  clock.c  hash-scheme.c  hash-system.c  hash-system.h  main.c  random-gen.h  stats.py  testrandom.sh  testsequential.sh
charles-university/data-structures-1/hashing/src/: clock.h  hash-scheme.c  hash-scheme.h  hash-system.c  hash-system.h  main.c  random-gen.c  random-gen.h
charles-university/data-structures-1/matrix-transposition/: .gitignore  CMakeLists.txt  Makefile  README  matrix_transposition.cbp  transposetest.sh
charles-university/data-structures-1/splay-tree/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  node.c  node.h  operation.c  operation.h  splay.sh  splay_tree.cbp  splaygen  splaytest.sh  splaytree  splaytree.c  tree.c  tree.h
(+537 files in other folders)
